tests/ui/type-alias-impl-trait/issue-104817.stock.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait`
  --> $DIR/issue-104817.rs:17:1
   |
LL | impl<T: Send> AnotherTrait for T {}
   | -------------------------------- first implementation here
LL | impl AnotherTrait for OpaqueType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
